--- a/.cproject
+++ b/.cproject
@@ -46,14 +46,14 @@
 							<tool id="nvcc.linker.base.367830157" name="NVCC Linker" superClass="nvcc.linker.base">
 								<option id="nvcc.linker.option.paths.926435254" name="Library search path (-L)" superClass="nvcc.linker.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="/usr/local/lib"/>
-									<listOptionValue builtIn="false" value="/usr/lib/aarch64-linux-gnu"/>
-									<listOptionValue builtIn="false" value="/usr/lib/aarch64-linux-gnu/tegra"/>
-									<listOptionValue builtIn="false" value="/usr/lib"/>
 								</option>
 								<option id="nvcc.linker.option.libs.1800347047" name="Libraries (-l)" superClass="nvcc.linker.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="usb-1.0"/>
 									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="ipc"/>
 									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="opencv_core"/>
+								</option>
+								<option id="nvcc.linker.option.other.295630662" superClass="nvcc.linker.option.other" valueType="stringList">
+									<listOptionValue builtIn="false" value="-rpath=/usr/lib/aarch64-linux-gnu/tegra"/>
 								</option>
 								<inputType id="nvcc.linker.input.1481615624" superClass="nvcc.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -127,9 +127,9 @@
 								</option>
 								<option id="nvcc.linker.option.paths.117205399" name="Library search path (-L)" superClass="nvcc.linker.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="/usr/local/lib"/>
-									<listOptionValue builtIn="false" value="/usr/lib/aarch64-linux-gnu"/>
-									<listOptionValue builtIn="false" value="/usr/lib/aarch64-linux-gnu/tegra"/>
-									<listOptionValue builtIn="false" value="/usr/lib"/>
+								</option>
+								<option id="nvcc.linker.option.other.86628005" superClass="nvcc.linker.option.other" valueType="stringList">
+									<listOptionValue builtIn="false" value="-rpath=/usr/lib/aarch64-linux-gnu/tegra"/>
 								</option>
 								<inputType id="nvcc.linker.input.547404825" superClass="nvcc.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
